--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --base-href=https://fernanmarcotipones.github.io/fmt-portfolio/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
